# framework

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp
core/: Core.cpp  Core.h  Data.cpp  Data.h  DataFactory.cpp  DataFactory.h  Graph.cpp  Graph.h  GraphNode.cpp  GraphNode.h  GraphNodeSocket.cpp  GraphNodeSocket.h  Plugin.cpp  Plugin.h  Timer.cpp  Timer.h  types.h
frontend/: Application.cpp  Application.h  DoubleValidator.h  GLViewer.cpp  GLViewer.h
frontend/widgets/CategoryList/: CategoryItem.h  CategoryList.h
math/: BoundingBox3.h  Matrix44.h  Ray3.h  Vec3.h  Vec4.h
plugins/clouds/: AddHeatSource.cpp  AddHeatSource.h  AddSource.h  Advect2d.cpp  Advect2d.h  Buoyancy.cpp  CloudData.cpp  CloudData.cpp.autosave  CloudData.h  CloudData.h.autosave  CloudDataBoundLayer.cpp  CloudDataBoundLayer.h  CloudRenderer.cpp  CloudRenderer.h  Clouds.ui  Clouds.ui.cpp  Clouds.ui.h  CreateCloud.cpp  CreateCloud.h  CreateClouds.cpp  CreateClouds.h  CreateClouds.h.autosave  ExportClouds.cpp  ExportClouds.h  ImportClouds.cpp  ImportClouds.h  Project2d.cpp  Project2d.h  VortexConfinement.cpp  VortexConfinement.h  WaterContinuity.cpp  plugin.cpp
plugins/clouds/2D/: AddHeatSource2D.cpp  AddHeatSource2D.h  AddSource2D.cpp  AddSource2D.h  Advect2D.cpp  Advect2D.h  Balloon.cpp  Balloon.h  Buoyancy2D.cpp  Buoyancy2D.h  CloudControl2D.cpp  CloudControl2D.h  Diffuse2D.cpp  Diffuse2D.h  Project2D.cpp  Project2D.h  VortexConfinement2D.cpp  VortexConfinement2D.h  WaterContinuity2D.cpp  WaterContinuity2D.h
plugins/clouds/3D/: AddHeatSource.cpp  AddHeatSource.h  Advect.cpp  Advect.h  Buoyancy.cpp  Buoyancy.h  Project.cpp  Project.h  VortexConfinement.cpp  VortexConfinement.h  WaterContinuity.cpp  WaterContinuity.h
plugins/gl/: Attribute.cpp  Attribute.h  Context.cpp  Context.h  Geometry.cpp  Geometry.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Visualizer.cpp  Visualizer.h
plugins/grandyn/: ExportParticles.cpp  ExportParticles.h  ImportParticles.cpp  ImportParticles.h  plugin.cpp
plugins/grandyn/2D/: Gravity2D.cpp  Gravity2D.h  Integrate2D.cpp  Integrate2D.h
plugins/houdini/: HouGeo.cpp  HouGeo.h  HouGeoAdapter.cpp  HouGeoAdapter.h  HouGeoIO.cpp  HouGeoIO.h  HouScene.cpp  HouScene.h  ImportHouGeo.cpp  ImportHouGeo.h  ImportHoudini.cpp  ImportHoudini.h  json.cpp  json.h  plugin.cpp
plugins/primitives/: Attribute.cpp  Attribute.h  Camera.cpp  Camera.h  Field.cpp  Field.h  Geometry.cpp  Geometry.h  ScalarField.cpp  ScalarField.h  VectorField.cpp  VectorField.h  plugin.cpp
plugins/sim/: Operator.cpp  Operator.h  SimObject.cpp  SimObject.h  Solver.cpp  Solver.h  plugin.cpp
